objects/Scheduled_Section__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>School associated to the scheduled section</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Scheduled Sections</relationshipLabel>
        <relationshipName>Scheduled_Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <formula>Course__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipName>Schedule_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Daily_Attendance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Daily Attendance?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Time_Text__c</fullName>
        <label>End Time Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade_Level__c</fullName>
        <formula>TEXT(Schedule_Group__r.Grade_Level__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grade Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade_Levels__c</fullName>
        <formula>IF(INCLUDES( Schedule_Group__r.All_Grades__c , &quot;K&quot;), &quot;K;&quot;, NULL) &amp;
IF(INCLUDES( Schedule_Group__r.All_Grades__c , &quot;1&quot;), &quot;1;&quot;, NULL) &amp;
IF(INCLUDES( Schedule_Group__r.All_Grades__c , &quot;2&quot;), &quot;2;&quot;, NULL) &amp;
IF(INCLUDES( Schedule_Group__r.All_Grades__c , &quot;3&quot;), &quot;3;&quot;, NULL) &amp;
IF(INCLUDES( Schedule_Group__r.All_Grades__c , &quot;4&quot;), &quot;4;&quot;, NULL) &amp;
IF(INCLUDES( Schedule_Group__r.All_Grades__c , &quot;5&quot;), &quot;5;&quot;, NULL) &amp;
IF(INCLUDES( Schedule_Group__r.All_Grades__c , &quot;6&quot;), &quot;6;&quot;, NULL) &amp;
IF(INCLUDES( Schedule_Group__r.All_Grades__c , &quot;7&quot;), &quot;7;&quot;, NULL) &amp;
IF(INCLUDES( Schedule_Group__r.All_Grades__c , &quot;8&quot;), &quot;8;&quot;, NULL) &amp;
IF(INCLUDES( Schedule_Group__r.All_Grades__c , &quot;9&quot;), &quot;9;&quot;, NULL) &amp;
IF(INCLUDES( Schedule_Group__r.All_Grades__c , &quot;10&quot;), &quot;10;&quot;, NULL) &amp;
IF(INCLUDES( Schedule_Group__r.All_Grades__c , &quot;11&quot;), &quot;11;&quot;, NULL) &amp;
IF(INCLUDES( Schedule_Group__r.All_Grades__c , &quot;12&quot;), &quot;12;&quot;, NULL) &amp;
IF(INCLUDES( Schedule_Group__r.All_Grades__c , &quot;PS&quot;), &quot;PS;&quot;, NULL) &amp;
IF(INCLUDES( Schedule_Group__r.All_Grades__c , &quot;PK&quot;), &quot;PK&quot;, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grade Levels</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Needs_Publish__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicator of whether this scheduled section has been published since its creation (or, if a scheduled section has been edited, whether it has been re-published)</description>
        <label>Needs Publish</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Meeting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Period_Key__c</fullName>
        <description>Key that links the scheduled section to a Period if Setup is period based.</description>
        <label>Period Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Attendance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record Attendance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference_Id__c</fullName>
        <description>Key for Section Scheduled: Setup-Reporting Period-Teacher-Group/Period</description>
        <externalId>true</externalId>
        <label>Reference Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Reporting_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reporting Period</label>
        <referenceTo>Time_Element__c</referenceTo>
        <relationshipLabel>Scheduled Sections</relationshipLabel>
        <relationshipName>Scheduled_Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Room_Key__c</fullName>
        <description>Unique Key for Reporting Period - Period - Room combination</description>
        <externalId>true</externalId>
        <label>Room Key</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Room</label>
        <referenceTo>Room__c</referenceTo>
        <relationshipName>Schedule_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rounded_End_Time__c</fullName>
        <label>Rounded End Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rounded_Start_Time__c</fullName>
        <label>Rounded Start Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Group_Name__c</fullName>
        <formula>Schedule_Group_Section__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schedule Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Group_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to Section object populated with the related Schedule Group</description>
        <label>Schedule Group (Section)</label>
        <referenceTo>Section__c</referenceTo>
        <relationshipLabel>Scheduled Sections (Schedule Group (Section))</relationshipLabel>
        <relationshipName>Scheduled_Sections1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Schedule_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Schedule Group</label>
        <referenceTo>Schedule_Group__c</referenceTo>
        <relationshipLabel>Scheduled Sections</relationshipLabel>
        <relationshipName>Scheduled_Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Schedule_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Schedule Template</label>
        <referenceTo>Schedule_Template__c</referenceTo>
        <relationshipLabel>Scheduled Sections</relationshipLabel>
        <relationshipName>Scheduled_Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Section_Reference_Id__c</fullName>
        <externalId>true</externalId>
        <label>Section Reference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_ReportingPeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Section/ReportingPeriod</label>
        <referenceTo>Section_ReportingPeriod__c</referenceTo>
        <relationshipLabel>Scheduled Sections</relationshipLabel>
        <relationshipName>Scheduled_Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Section</label>
        <referenceTo>Section__c</referenceTo>
        <relationshipLabel>Scheduled Sections</relationshipLabel>
        <relationshipName>Scheduled_Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Staff_Key__c</fullName>
        <label>Staff Key</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff</label>
        <referenceTo>Staff__c</referenceTo>
        <relationshipName>Schedule_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Time_Text__c</fullName>
        <label>Start Time Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Scheduled Section</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Schedule_Template__c</columns>
        <columns>Schedule_Group__c</columns>
        <columns>Course_Name__c</columns>
        <columns>Section_Reference_Id__c</columns>
        <columns>Reference_Id__c</columns>
        <columns>Reporting_Period__c</columns>
        <columns>Account__c</columns>
        <columns>Rounded_Start_Time__c</columns>
        <columns>Rounded_End_Time__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>No_Meeting__c</columns>
        <columns>Schedule_Group_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Hill</fullName>
        <columns>Schedule_Template__c</columns>
        <columns>Schedule_Group__c</columns>
        <columns>Course_Name__c</columns>
        <columns>Section_Reference_Id__c</columns>
        <columns>Reference_Id__c</columns>
        <columns>Reporting_Period__c</columns>
        <columns>Account__c</columns>
        <columns>Rounded_Start_Time__c</columns>
        <columns>Rounded_End_Time__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>No_Meeting__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>equals</operation>
            <value>Hill</value>
        </filters>
        <label>Hill</label>
    </listViews>
    <nameField>
        <label>Scheduled Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheduled Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>