objects/Scheduled_Section__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Schedule_Template__c</columns>
    <columns>Schedule_Group__c</columns>
    <columns>Course_Name__c</columns>
    <columns>Section_Reference_Id__c</columns>
    <columns>Reference_Id__c</columns>
    <columns>Reporting_Period__c</columns>
    <columns>Account__c</columns>
    <columns>Rounded_Start_Time__c</columns>
    <columns>Rounded_End_Time__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>No_Meeting__c</columns>
    <columns>Schedule_Group_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>