objects/Scheduled_Section__c/listViews/Hill.listView-meta.xml
<ListView>
    <fullName>Hill</fullName>
    <columns>Schedule_Template__c</columns>
    <columns>Schedule_Group__c</columns>
    <columns>Course_Name__c</columns>
    <columns>Section_Reference_Id__c</columns>
    <columns>Reference_Id__c</columns>
    <columns>Reporting_Period__c</columns>
    <columns>Account__c</columns>
    <columns>Rounded_Start_Time__c</columns>
    <columns>Rounded_End_Time__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>No_Meeting__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
        <value>Hill</value>
    </filters>
    <label>Hill</label>
</ListView>